[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/menu/main_menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/menu/options_menu/OptionsMenu.tscn" type="PackedScene" id=2]

[sub_resource type="Theme" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 140.0
margin_top = -100.0
margin_right = -140.0
margin_bottom = 100.0
theme = SubResource( 1 )

[node name="Start" type="Button" parent="Panel/VBoxContainer"]
margin_right = 744.0
margin_bottom = 64.0
size_flags_vertical = 3
text = "Start"
icon_align = 1

[node name="Options" type="Button" parent="Panel/VBoxContainer"]
margin_top = 68.0
margin_right = 744.0
margin_bottom = 132.0
size_flags_vertical = 3
text = "Options"
icon_align = 1

[node name="Exit" type="Button" parent="Panel/VBoxContainer"]
margin_top = 136.0
margin_right = 744.0
margin_bottom = 200.0
size_flags_vertical = 3
text = "Exit"
icon_align = 1

[node name="Options" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="pressed" from="Panel/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
